[package]
name = "intelligence-path-finding"
version = "0.1.0"
edition = "2024"
description = "Intelligent path-finding algorithms with interactive visualization"
authors = ["Your Name <your.email@example.com>"]

[dependencies]
macroquad = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
criterion = "0.5"

[[bin]]
name = "pathfinding-demo"
path = "src/main.rs"

[lib]
name = "pathfinding"
path = "src/lib.rs"
