[package]
name = "intelligence-path-finding"
version = "0.1.0"
edition = "2024"
description = "Optimize path-finding algorithms using PSO, ACO"
authors = ["miaan"]

[lib]
name = "pathfinding"
path = "src/lib.rs"

[[bin]]
name = "pathfinding-demo"
path = "src/main.rs"

[dependencies]
macroquad = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
criterion = "0.5"
